--- a/queertk/static/sass/style.css
+++ b/queertk/static/sass/style.css
@@ -1,14 +1,8 @@
-html {
-  background: url("../background.jpg") no-repeat center center fixed;
-  background-size: cover;
-}
-
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
+/**
+ * Variables
+ *
+ * The majority of the configuration for the toolkit.
+ */
 aside {
   margin: 0;
   padding: 20px;
@@ -41,8 +35,7 @@ aside a {
 
 header {
   background: #1f1f1f;
-  padding: 10px;
-  height: 30px;
+  padding: 15px;
 }
 
 header .header {
@@ -78,67 +71,8 @@ header .header span {
   color: #ffffffb4;
 }
 
-.content {
-  background: #1f1f1f;
-  padding-top: 1rem;
-  overflow: auto;
-  color: #f3ecf2;
-  height: 100%;
-}
-
-.content .wrapper {
-  margin: auto;
-  max-width: 90%;
-}
-
-.content-info {
-  height: 100%;
-  max-height: calc(100vh - 120px);
-  background: #434343;
-  border-radius: 4px;
-  padding: 20px;
-}
-
-.sidebar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: #1f1e1fde;
-  -webkit-backdrop-filter: blur(15px);
-          backdrop-filter: blur(15px);
-  width: 20rem;
-  max-height: calc(100vh - 100px);
-}
-
-.sidebar a {
-  margin-top: 1em;
-  font-size: clamp(1.1em, 2.1vw, 1.3em);
-}
-
-.flex-container_inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100%;
-}
-
-.wrapper {
-  margin: auto;
-}
-
 .flex-container {
-  height: calc(100vh - 100px);
+  height: calc(100vh - 110px);
   margin: auto;
   -webkit-box-flex: 1;
       -ms-flex: 1 100%;
