--- a/queertk/blueprints/artist/templates/artist.html
+++ b/queertk/blueprints/artist/templates/artist.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2 class="squeeze">{{ artist.artist_name }}</h2>
+    <h2>{{ artist.artist_name }}</h2>
     {{ artist.biography | safe }}
 {% endblock %}
 
