--- a/queertk/templates/base.html
+++ b/queertk/templates/base.html
@@ -33,6 +33,7 @@
             <!-- Header -->
             <header>
                 <div class="header wrapper">
+                    <span>Something would ideally be here, like a logo.</span>
                 </div>
             </header>
             <!-- Page Title Bar -->
