qtapp blueprint to management

--- a/application/blueprints/management/templates/index_management.html
+++ b/application/blueprints/management/templates/index_management.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block navigation %}
-{% include "partials/qtapp-navigation.html" %}
+{% include "partials/navigation_management.html" %}
 {% endblock %}
 
 {% block content %}
-<p>QTApp Dashboard</p>
+<p>Management Dashboard</p>
 {% endblock %}
