--- a/application/templates/partials/navigation.html
+++ b/application/templates/partials/navigation.html
@@ -5,5 +5,5 @@
 <a href="#">Contact</a>
 <a style="flex: 1 1 auto;"></a>
 <a href="#">My Account</a>
-<a href="{{ url_for('bp_qtapp.dashboard') }}">Admin Portal</a>
+<a href="{{ url_for('bp_management.dashboard') }}">Admin Portal</a>
 <a data-a11y-dialog-show="my-dialog">About This Site</a>
