Add /about, remove flask-admin, small refactors

--- a/application/blueprints/production/templates/production.html
+++ b/application/blueprints/production/templates/production.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h2 class="squeeze">{{ production.description }}</h2>
-<p class="hug">{{ season.description }}</p>
+<p class="hug">{{ production.season_description }}</p>
 
 
 {% if notices %}
