--- a/application/blueprints/management/templates/update-post.html
+++ b/application/blueprints/management/templates/update-post.html
@@ -3,8 +3,10 @@
 {% block content %}
 <h1>Manage Posts</h1>
 
-<form action="/" method="POST">
+<form action="{{ url_for('bp_management.update_post') }}" method="POST">
     {{ form.csrf_token }}
+    {{ form.type.label }}
+    {{ form.type }}
     {{ form.author.label }}
     {{ form.author }}
     {{ form.title.label }}
