--- a/application/templates/partials/navigation.html
+++ b/application/templates/partials/navigation.html
@@ -1,7 +1,7 @@
 <a href="{{ url_for('home') }}">Home</a>
 <a href="{{ url_for('events') }}">Events</a>
 <a href="{{ url_for('news') }}">News</a>
-<a href="#">About</a>
+<a href="{{ url_for('about') }}">About</a>
 <a href="#">Contact</a>
 <a style="flex: 1 1 auto;"></a>
 <a href="#">My Account</a>
