--- a/application/static/sass/components/_scaffolding.sass
+++ b/application/static/sass/components/_scaffolding.sass
@@ -98,7 +98,9 @@ h5
     font-size: $h5
 
 // Link styling
-a, .link-like
+a.fancy-link,
+.link-like,
+.post-content a
   position: relative
   color: rgb(239, 171, 171)
   text-decoration: none
