--- a/application/blueprints/management/templates/partials/navigation_management.html
+++ b/application/blueprints/management/templates/partials/navigation_management.html
@@ -1,8 +1,8 @@
-<a href="#">Dashboard</a>
-<a href="#">Marketing</a>
-<a href="#">Management</a>
-<a href="#">Support</a>
-<a style="flex: 1 1 auto;"></a>
-<a href="#">My Account</a>
-<a href="{{ url_for('home') }}">Website Home</a>
-<a data-a11y-dialog-show="my-dialog">About This Site</a>
+<a class="fancy-link" href="#">Dashboard</a>
+<a class="fancy-link" href="#">Marketing</a>
+<a class="fancy-link" href="#">Management</a>
+<a class="fancy-link" href="#">Support</a>
+<a class="fancy-link" style="flex: 1 1 auto;"></a>
+<a class="fancy-link" href="#">My Account</a>
+<a class="fancy-link" href="{{ url_for('home') }}">Website Home</a>
+<a class="fancy-link" data-a11y-dialog-show="my-dialog">About This Site</a>
