--- a/application/static/sass/main.css
+++ b/application/static/sass/main.css
@@ -120,22 +120,30 @@ h5 {
   }
 }
 
-a, .link-like {
+a.fancy-link,
+.link-like,
+.post-content a {
   position: relative;
   color: #efabab;
   text-decoration: none;
 }
 
-a:hover, .link-like:hover {
+a.fancy-link:hover,
+.link-like:hover,
+.post-content a:hover {
   color: #cf7272;
 }
 
-a:hover::before, .link-like:hover::before {
+a.fancy-link:hover::before,
+.link-like:hover::before,
+.post-content a:hover::before {
   -webkit-transform: scaleX(1);
           transform: scaleX(1);
 }
 
-a::before, .link-like::before {
+a.fancy-link::before,
+.link-like::before,
+.post-content a::before {
   content: "";
   position: absolute;
   display: block;
@@ -952,7 +960,6 @@ aside a {
 
 header {
   background: #1f1f1f;
-  padding: 15px;
 }
 
 header .header {
@@ -1064,5 +1071,32 @@ header .header span {
   width: 100%;
   border-radius: 4px;
   margin-bottom: 10px;
+}
+
+.circle {
+  line-height: 0;
+  display: inline-block;
+  border: 4px solid rgba(200, 200, 200, 0.4);
+  border-radius: 50%;
+  /*box-shadow: 0px 0px 5px rgba(0,0,0,0.4);*/
+  -webkit-transition: linear 0.25s;
+  transition: linear 0.25s;
+  height: 40px;
+  width: 40px;
+  margin: 10px 20px;
+}
+
+.circle img {
+  border-radius: 50%;
+}
+
+.circle:hover {
+  transition: ease-out 0.2s;
+  border: 4px solid #cf1a1a;
+  -webkit-transition: ease-out 0.2s;
+}
+
+a .circle {
+  color: transparent;
 }
 /*# sourceMappingURL=main.css.map */
