--- a/application/static/sass/style.css
+++ b/application/static/sass/style.css
@@ -35,7 +35,6 @@ aside a {
 
 header {
   background: #1f1f1f;
-  padding: 15px;
 }
 
 header .header {
@@ -156,5 +155,32 @@ header .header span {
   width: 100%;
   border-radius: 4px;
   margin-bottom: 10px;
+}
+
+.circle {
+  line-height: 0;
+  display: inline-block;
+  border: 4px solid rgba(200, 200, 200, 0.4);
+  border-radius: 50%;
+  /*box-shadow: 0px 0px 5px rgba(0,0,0,0.4);*/
+  -webkit-transition: linear 0.25s;
+  transition: linear 0.25s;
+  height: 40px;
+  width: 40px;
+  margin: 10px 20px;
+}
+
+.circle img {
+  border-radius: 50%;
+}
+
+.circle:hover {
+  transition: ease-out 0.2s;
+  border: 4px solid #cf1a1a;
+  -webkit-transition: ease-out 0.2s;
+}
+
+a .circle {
+  color: transparent;
 }
 /*# sourceMappingURL=style.css.map */
