--- a/application/static/sass/style.sass
+++ b/application/static/sass/style.sass
@@ -35,7 +35,7 @@ aside
 
 header
     background: $bg-dark
-    padding: 15px
+    // padding: 15px
     // height: 30px
 
     .header
@@ -54,10 +54,6 @@ header
     height: $page-title-height
     text-size: 0.65rem
     color: #ffffffb4
-
-
-
-
 
 // .flex
 //     display: flex
@@ -124,3 +120,26 @@ header
     margin-bottom: 10px
     // padding: 20px
 
+.circle
+    line-height: 0        // remove line-height */
+    display: inline-block    // circle wraps image */
+    // margin: 5px
+    border: 4px solid rgba(200,200,200,0.4)
+    border-radius: 50%    /* relative value */
+    /*box-shadow: 0px 0px 5px rgba(0,0,0,0.4);*/
+    transition: linear 0.25s
+    height: 40px
+    width: 40px
+    margin: 10px 20px
+
+    img
+        border-radius: 50%
+
+    &:hover
+        transition: ease-out 0.2s
+        border: 4px solid #cf1a1a
+        -webkit-transition: ease-out 0.2s
+
+a
+    .circle
+        color: transparent
