--- a/application/templates/events.html
+++ b/application/templates/events.html
@@ -4,7 +4,7 @@
 <h3>Season 9</h3>
 <ul>
 {% for p in productions %}
-    <li><a href="/prod/{{p.production_id}}/{{ p.slug }}">{{ p.prod_desc }}</a></li>
+    <li><a class="fancy-link" href="/prod/{{p.production_id}}/{{ p.slug }}">{{ p.prod_desc }}</a></li>
 {% endfor %}
 </ul>
 {% endblock %}
