--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -6,7 +6,7 @@
 <h3>Heading 3</h3>
 <h4>Heading 4</h4>
 <h5>Heading 5</h5>
-<p>Lorem ipsum, dolor sit amet <a href="#">consectetur adipisicing</a> elit. Eum recusandae ab exercitationem atque nulla quas eligendi corporis aliquam. Ad eligendi aliquid doloribus ratione facilis excepturi rem accusantium hic inventore aliquam.</p>
+<p>Lorem ipsum, dolor sit amet <a class="fancy-link" href="#">consectetur adipisicing</a> elit. Eum recusandae ab exercitationem atque nulla quas eligendi corporis aliquam. Ad eligendi aliquid doloribus ratione facilis excepturi rem accusantium hic inventore aliquam.</p>
 <ol>
     <li>Item 1</li>
     <li>Item 2</li>
@@ -15,7 +15,7 @@
 
 <h4>Heading 4</h4>
 <h5>Heading 5</h5>
-<p>Lorem ipsum, dolor sit amet <a href="#">consectetur adipisicing</a> elit. Eum recusandae ab exercitationem atque
+<p>Lorem ipsum, dolor sit amet <a class="fancy-link" href="#">consectetur adipisicing</a> elit. Eum recusandae ab exercitationem atque
     nulla quas eligendi corporis aliquam. Ad eligendi aliquid doloribus ratione facilis excepturi rem accusantium hic
     inventore aliquam.</p>
 <ol>
@@ -25,7 +25,7 @@
 </ol>
 
 <h5>Heading 5</h5>
-<p>Lorem ipsum, dolor sit amet <a href="#">consectetur adipisicing</a> elit. Eum recusandae ab exercitationem atque
+<p>Lorem ipsum, dolor sit amet <a class="fancy-link" href="#">consectetur adipisicing</a> elit. Eum recusandae ab exercitationem atque
     nulla quas eligendi corporis aliquam. Ad eligendi aliquid doloribus ratione facilis excepturi rem accusantium hic
     inventore aliquam.</p>
 <ol>
