--- a/application/templates/news.html
+++ b/application/templates/news.html
@@ -4,7 +4,7 @@
 <h1>News</h1>
 <ul>
 {% for p in posts %}
-<li><a href="/post/{{ p.post_id }}">{{ p.title }}</a></li>
+<li><a class="fancy-link" href="/post/{{ p.post_id }}">{{ p.title }}</a></li>
 {% endfor %}
 </ul>
 {% endblock %}
