fix nav link spacing, add basic post list in /news with styles, change management routes (/app/post/new and /app/post/update/n)

--- a/application/blueprints/management/templates/manage-post.html
+++ b/application/blueprints/management/templates/manage-post.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 
+{% block head %}
+{{ ckeditor.load() }}
+{{ ckeditor.config('content') }}
+{% endblock %}
+
 {% block content %}
 <h1>Manage Posts</h1>
 
-<form action="{{ url_for('bp_management.update_post') }}" method="POST">
+<form action="" method="POST">
     {{ form.csrf_token }}
     {{ form.type.label }}
     {{ form.type }}
