--- a/application/static/sass/components/_navigation.sass
+++ b/application/static/sass/components/_navigation.sass
@@ -14,7 +14,6 @@
     overflow: hidden
 
     a
-        margin: auto 0
-        height: 2.5rem
+        margin: 1.25em 0 0 0
         font-size: clamp(1.1em, 2.1vw, 1.3em)
         align-content: center
