--- a/application/static/sass/style.sass
+++ b/application/static/sass/style.sass
@@ -137,7 +137,7 @@ header
 
     &:hover
         transition: ease-out 0.2s
-        border: 4px solid #cf1a1a
+        border: 4px solid #ff6d6d91
         -webkit-transition: ease-out 0.2s
 
 a
