--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -25,6 +25,8 @@
         {% else %}
             <title>Untitled</title>
         {% endif %}
+        {% block head %}
+        {% endblock %}
         <script defer src="https://cdn.jsdelivr.net/npm/a11y-dialog@7/dist/a11y-dialog.min.js"></script>
     </head>
     <body class="background">
