Some html/css updates to productions. Wrapper to fixed width. Cast/crew distinction, added nice in modal with pics and links.

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -36,7 +36,7 @@
             <header>
                 <div class="header wrapper">
                     <a href="{{ url_for('home') }}" class="circle">
-                        <img height="40" width="40" src="{{ url_for('static', filename='images/logo-circle.png') }}" alt="Cloud Chen">
+                        <img height="40" width="40" src="{{ url_for('static', filename='images/logo-circle.png') }}">
                     </a>
                     <span style="font-size: 1.5rem;">Queer Theatre Kalamazoo</span>
                 </div>
