Prod credits to modal with pictures and links. Added credit category support (cast/crew for now).

--- a/application/blueprints/artist/templates/artist.html
+++ b/application/blueprints/artist/templates/artist.html
@@ -7,7 +7,7 @@
 
 {% block sidebar_image %}
     {% if headshot %}
-        <img src="{{ url_for('artists.static', filename=headshot) }}" id="headshot" alt="" srcset="">
+        <img src="{{ url_for('bp_artist.static', filename=headshot) }}" id="headshot" alt="" srcset="">
     {% endif %}
 {% endblock %}
 
