--- a/application/static/sass/base/_variables.sass
+++ b/application/static/sass/base/_variables.sass
@@ -26,8 +26,8 @@ $desktop: $medium !default
 //==============================================================================
 
 $background: white !default
-$primary-color: #0366ee !default
-$secondary-color: #29de7d !default
+$primary-color: #b3321c !default
+$secondary-color: #543a9b !default
 $accent-color: #cdcdcd !default
 $alternate-background: #fafafa !default
 $alternate-color: #404040 !default
@@ -97,7 +97,7 @@ $button-background: $primary-color !default
 $button-background-hover: darken($button-background, 10%) !default
 $button-color: #ffffff !default
 $button-font-weight: 600 !default
-$button-font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif !default
+$button-font-family: 'Jost', -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif !default
 $button-font-size: 1rem !default
 $button-border-width: 1px !default
 $button-border-style: solid !default
@@ -115,8 +115,8 @@ $muted-border: 1px solid $accent-color !default
 $muted-border-hover: 1px solid darken($accent-color, 30%) !default
 $muted-background: transparent !default
 $muted-background-hover: transparent !default
-$muted-color: darken($accent-color, 50%) !default
-$muted-color-hover: darken($accent-color, 50%) !default
+$muted-color: #ffffff !default // darken($accent-color, 50%) !default
+$muted-color-hover: #dfdfdf !default // darken($accent-color, 50%) !default
 
 // Round Buttons
 $round-buttons: 40px !default
