--- a/application/static/sass/style.css
+++ b/application/static/sass/style.css
@@ -19,7 +19,7 @@ aside a {
   padding: 3px 6px;
   margin: 0 4px;
   border-radius: 4px;
-  background: #b71e1e;
+  background: #b3321c;
   color: #fff;
   font-size: 0.8rem;
   -webkit-user-select: none;
