--- a/application/static/sass/style.sass
+++ b/application/static/sass/style.sass
@@ -24,7 +24,7 @@ aside
     padding: 3px 6px
     margin: 0 4px
     border-radius: $fg-corner-radius
-    background: $theme-primary
+    background: $primary-color
     color: #fff
     font-size: 0.8rem
     user-select: none
