--- a/application/static/sass/components/_scaffolding.sass
+++ b/application/static/sass/components/_scaffolding.sass
@@ -219,9 +219,14 @@ dd
 
 // Wrapper, horizontally centered
 .wrapper
-  margin-left: auto
   margin-right: auto
-  max-width: 90%
+  margin-left:  auto
+
+  max-width: 1120px
+
+  padding-right: 10px
+  padding-left:  10px
+
 
 // Content
 .content-section
