--- a/application/static/sass/components/_modals.sass
+++ b/application/static/sass/components/_modals.sass
@@ -21,7 +21,7 @@
     animation: fade-in 200ms both
 
 .dialog-content
-    background-color: rgba(37, 37, 37, 0.446)
+    background-color: rgba(29, 29, 29, 0.555)
     backdrop-filter: blur(15px)
     margin: auto
     z-index: 2
@@ -29,8 +29,9 @@
     animation: fade-in 400ms 200ms both, slide-up 400ms 200ms both
     padding: 1em
     max-width: 90%
-    width: 600px
-    border-radius: 2px
+    width: 750px
+    border-radius: 4px
+    border-top: 2rem solid $primary-color
 
 
     &.center
